Fastfilter CPP integration via JDK FFI, Bazel, QEMU and multiplatform testing